# lucid-recon

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.githooks/: post-commit  pre-commit
data/: chips.json  clocks.json  lineage.json  services.json
fixtures/irem_m72_mister/: core.sdc  game.mra
fixtures/irem_m72_mister/rtl/: core_top.v
fixtures/irem_m72_mister/rtl/cpu-mc8051/: mc8051.v
fixtures/irem_m72_mister/rtl/cpu-v30/: v30.v
fixtures/irem_m72_mister/rtl/sdram/: sdram_4w.v
fixtures/irem_m72_mister/rtl/sound-jt51/: jt51.v
fixtures/irem_m72_mister/rtl/t80/: t80.v
src/: bom.rs  clockplan.rs  equiv.rs  error.rs  lib.rs  lineage.rs  loader.rs  main.rs  mra.rs  plan.rs  refdata.rs  report.rs  services.rs  source.rs
tests/: validation.rs
